updating splitform docs and code with curvilnear

--- a/docs/splitform/dg.bib
+++ b/docs/splitform/dg.bib
@@ -1,3 +1,14 @@
+@article{rhebergen2008discontinuous,
+  title={{Discontinuous Galerkin finite element methods for hyperbolic nonconservative partial differential equations}},
+  author={Rhebergen, Sander and Bokhove, Onno and van der Vegt, Jaap JW},
+  journal={Journal of Computational Physics},
+  volume={227},
+  number={3},
+  pages={1887--1922},
+  year={2008},
+  publisher={Elsevier}
+}
+
 @article{buffa2010isogeometric,
   title={{Isogeometric analysis in electromagnetics: B-splines approximation}},
   author={Buffa, Annalisa and Sangalli, Giancarlo and V{\'a}zquez, Rafael},
@@ -1317,6 +1328,27 @@ journal={Comput. Math. Appl.},
 volume={59},
 year={2010}, 
 pages={663-676}
+}
+
+@article{hicken2016multidimensional,
+  title={Multidimensional summation-by-parts operators: General theory and application to simplex elements},
+  author={Hicken, Jason E and Del Rey Fernández, David C and Zingg, David W},
+  journal={SIAM Journal on Scientific Computing},
+  volume={38},
+  number={4},
+  pages={A1935--A1958},
+  year={2016},
+  publisher={SIAM}
+}
+
+@article{gassner2016split,
+  title={{Split form nodal discontinuous Galerkin schemes with summation-by-parts property for the compressible Euler equations}},
+  author={Gassner, Gregor J and Winters, Andrew R and Kopriva, David A},
+  journal={Journal of Computational Physics},
+  volume={327},
+  pages={39--66},
+  year={2016},
+  publisher={Elsevier}
 }
 
 @article{kopriva2014energy,
