--- a/docs/splitform/dg.bib
+++ b/docs/splitform/dg.bib
@@ -1,3 +1,23 @@
+@article{olsson1995summation2,
+  title={{Summation by parts, projections, and stability. II}},
+  author={Olsson, Pelle},
+  journal={Mathematics of Computation},
+  volume={64},
+  number={212},
+  pages={1473--1493},
+  year={1995}
+}
+
+@article{olsson1995summation1,
+  title={{Summation by parts, projections, and stability. I}},
+  author={Olsson, Pelle},
+  journal={Mathematics of Computation},
+  volume={64},
+  number={211},
+  pages={1035--1065},
+  year={1995}
+}
+
 @article{rhebergen2008discontinuous,
   title={{Discontinuous Galerkin finite element methods for hyperbolic nonconservative partial differential equations}},
   author={Rhebergen, Sander and Bokhove, Onno and van der Vegt, Jaap JW},
