fixing pipe elbow experiments, adding 3D IGA-IPDG driver

--- a/docs/splitform/dg.bib
+++ b/docs/splitform/dg.bib
@@ -1831,12 +1831,15 @@ author = {Warburton, T. and Embree, Mark},
   year={2014},
   publisher={SIAM}
 }
-@article{ainsworthbernstein,
-  title={{Bernstein-B}{\'e}zier Finite Flements on Tetrahedral-Hexahedral-Pyramidal Partitions},
+@article{ainsworth2016bernstein,
+  title={{Bernstein-B{\'e}zier finite elements on tetrahedral--hexahedral--pyramidal partitions}},
   author={Ainsworth, Mark and Davydov, Oleg and Schumaker, Larry L},
-  journal={preprint}
+  journal={Computer Methods in Applied Mechanics and Engineering},
+  volume={304},
+  pages={140--170},
+  year={2016},
+  publisher={Elsevier}
 }
-
 %% Rob Kirby
 @article{kirby2015efficient,
   title={Efficient discontinuous {Galerkin} finite element methods via {Bernstein} polynomials},
