updating with new paper

--- a/docs/splitform/dg.bib
+++ b/docs/splitform/dg.bib
@@ -1,3 +1,135 @@
+@article{ranocha2017extended,
+  title={Extended skew-symmetric form for summation-by-parts operators and varying Jacobians},
+  author={Ranocha, Hendrik and {\"O}ffner, Philipp and Sonar, Thomas},
+  journal={Journal of Computational Physics},
+  volume={342},
+  pages={13--28},
+  year={2017},
+  publisher={Elsevier}
+}
+
+@article{gassner2017br1,
+  title={The BR1 Scheme is Stable for the Compressible Navier-Stokes Equations},
+  author={Gassner, Gregor J and Winters, Andrew R and Hindenlang, Florian J and Kopriva, David A},
+  journal={arXiv preprint arXiv:1704.03646},
+  year={2017}
+}
+
+@article{helenbrook2009existence,
+  title={{On the existence of explicit hp-finite element methods using Gauss--Lobatto integration on the triangle}},
+  author={Helenbrook, Brian T},
+  journal={SIAM Journal on Numerical Analysis},
+  volume={47},
+  number={2},
+  pages={1304--1318},
+  year={2009},
+  publisher={SIAM}
+}
+
+@article{mock1980systems,
+  title={Systems of conservation laws of mixed type},
+  author={Mock, Michael S},
+  journal={Journal of Differential equations},
+  volume={37},
+  number={1},
+  pages={70--88},
+  year={1980},
+  publisher={Elsevier}
+}
+
+@article{hughes1986new,
+  title={{A new finite element formulation for computational fluid dynamics: I. Symmetric forms of the compressible Euler and Navier-Stokes equations and the second law of thermodynamics}},
+  author={Hughes, Thomas JR and Franca, LP and Mallet, M},
+  journal={Computer Methods in Applied Mechanics and Engineering},
+  volume={54},
+  number={2},
+  pages={223--234},
+  year={1986},
+  publisher={Elsevier}
+}
+
+@article{tadmor2003entropy,
+  title={Entropy stability theory for difference approximations of nonlinear conservation laws and related time-dependent problems},
+  author={Tadmor, Eitan},
+  journal={Acta Numerica},
+  volume={12},
+  pages={451--512},
+  year={2003},
+  publisher={Cambridge University Press}
+}
+
+@article{tadmor1987numerical,
+  title={The numerical viscosity of entropy stable schemes for systems of conservation laws. I},
+  author={Tadmor, Eitan},
+  journal={Mathematics of Computation},
+  volume={49},
+  number={179},
+  pages={91--103},
+  year={1987}
+}
+
+@article{wintermeyer2017entropy,
+  title={An entropy stable nodal discontinuous Galerkin method for the two dimensional shallow water equations on unstructured curvilinear meshes with discontinuous bathymetry},
+  author={Wintermeyer, Niklas and Winters, Andrew R and Gassner, Gregor J and Kopriva, David A},
+  journal={Journal of Computational Physics},
+  volume={340},
+  pages={200--242},
+  year={2017},
+  publisher={Elsevier}
+}
+
+@article{gassner2016well,
+  title={{A well balanced and entropy conservative discontinuous Galerkin spectral element method for the shallow water equations}},
+  author={Gassner, Gregor J and Winters, Andrew R and Kopriva, David A},
+  journal={Applied Mathematics and Computation},
+  volume={272},
+  pages={291--308},
+  year={2016},
+  publisher={Elsevier}
+}
+
+
+@article{carpenter2014entropy,
+  title={{Entropy Stable Spectral Collocation Schemes for the Navier--Stokes Equations: Discontinuous Interfaces}},
+  author={Carpenter, Mark H and Fisher, Travis C and Nielsen, Eric J and Frankel, Steven H},
+  journal={SIAM Journal on Scientific Computing},
+  volume={36},
+  number={5},
+  pages={B835--B867},
+  year={2014},
+  publisher={SIAM}
+}
+@article{fisher2013high,
+  title={{High-order entropy stable finite difference schemes for nonlinear conservation laws: Finite domains}},
+  author={Fisher, Travis C and Carpenter, Mark H},
+  journal={Journal of Computational Physics},
+  volume={252},
+  pages={518--557},
+  year={2013},
+  publisher={Academic Press}
+}
+
+@article{chen2017entropy,
+  title={Entropy stable high order discontinuous Galerkin methods with suitable quadrature rules for hyperbolic conservation laws},
+  author={Chen, Tianheng and Shu, Chi-Wang},
+  journal={Journal of Computational Physics},
+  volume={345},
+  pages={427--461},
+  year={2017},
+  publisher={Elsevier}
+}
+
+@article{svard2004coordinate,
+  title={On coordinate transformations for summation-by-parts operators},
+  author={Sv{\"a}rd, Magnus},
+  journal={Journal of Scientific Computing},
+  volume={20},
+  number={1},
+  pages={29--42},
+  year={2004},
+  publisher={Springer}
+}
+
 @article{olsson1995summation2,
   title={{Summation by parts, projections, and stability. II}},
   author={Olsson, Pelle},
@@ -28,213 +160,6 @@
   year={2008},
   publisher={Elsevier}
 }
-
-@article{buffa2010isogeometric,
-  title={{Isogeometric analysis in electromagnetics: B-splines approximation}},
-  author={Buffa, Annalisa and Sangalli, Giancarlo and V{\'a}zquez, Rafael},
-  journal={Computer Methods in Applied Mechanics and Engineering},
-  volume={199},
-  number={17},
-  pages={1143--1152},
-  year={2010},
-  publisher={Elsevier}
-}
-
-@article{cottrell2006isogeometric,
-  title={Isogeometric analysis of structural vibrations},
-  author={Cottrell, J Austin and Reali, Alessandro and Bazilevs, Yuri and Hughes, Thomas JR},
-  journal={Computer methods in applied mechanics and engineering},
-  volume={195},
-  number={41},
-  pages={5257--5296},
-  year={2006},
-  publisher={Elsevier}
-}
-
-@article{swartz1974relative,
-  title={{The relative efficiency of finite difference and finite element methods. I: Hyperbolic problems and splines}},
-  author={Swartz, Blair and Wendroff, Burton},
-  journal={SIAM Journal on Numerical Analysis},
-  volume={11},
-  number={5},
-  pages={979--993},
-  year={1974},
-  publisher={SIAM}
-}
-
-@article{auricchio2012simple,
-  title={{A simple algorithm for obtaining nearly optimal quadrature rules for NURBS-based isogeometric analysis}},
-  author={Auricchio, F and Calabro, Francesco and Hughes, TJR and Reali, A and Sangalli, G},
-  journal={Computer Methods in Applied Mechanics and Engineering},
-  volume={249},
-  pages={15--27},
-  year={2012},
-  publisher={Elsevier}
-}
-@article{hughes2010efficient,
-  title={{Efficient quadrature for NURBS-based isogeometric analysis}},
-  author={Hughes, Thomas JR and Reali, A and Sangalli, G},
-  journal={Computer methods in applied mechanics and engineering},
-  volume={199},
-  number={5},
-  pages={301--313},
-  year={2010},
-  publisher={Elsevier}
-}
-
-@article{thomee1974convergence,
-  title={{Convergence estimates for Galerkin methods for variable coefficient initial value problems}},
-  author={Thom{\'e}e, Vidar and Wendroff, Burton},
-  journal={SIAM Journal on Numerical Analysis},
-  volume={11},
-  number={5},
-  pages={1059--1068},
-  year={1974},
-  publisher={SIAM}
-}
-
-@article{auricchio2012isogeometric,
-  title={Isogeometric collocation for elastostatics and explicit dynamics},
-  author={Auricchio, F and Da Veiga, L Beir{\~a}o and Hughes, TJR and Reali, A and Sangalli, G},
-  journal={Computer methods in applied mechanics and engineering},
-  volume={249},
-  pages={2--14},
-  year={2012},
-  publisher={Elsevier}
-}
-
-@article{gudi2011interior,
-  title={An interior penalty method for a sixth-order elliptic equation},
-  author={Gudi, Thirupathi and Neilan, Michael},
-  journal={IMA journal of numerical analysis},
-  pages={drq031},
-  year={2011},
-  publisher={Oxford University Press}
-}
-
-@article{ratnani2012arbitrary,
-  title={{An arbitrary high-order spline finite element solver for the time domain Maxwell equations}},
-  author={Ratnani, Ahmed and Sonnendr{\"u}cker, Eric},
-  journal={Journal of Scientific Computing},
-  volume={51},
-  number={1},
-  pages={87--106},
-  year={2012},
-  publisher={Springer}
-}
-
-@article{kolmogoroffOber1936,
-title={{\"{U}ber die beste Ann\"{a}herung von Funktionen einer gegebenen Funktionenklasse}},
-author = {A. Kolmogoroff},
-journal={Annals of Mathematics},
-volume={37},
-year={1936},
-pages={107-110}
-}
-
-@book{pinkus2012n,
-  title={{$n$-Widths in Approximation Theory}},
-  author={Pinkus, Allan},
-  volume={7},
-  year={2012},
-  publisher={Springer Science \& Business Media}
-}
-
-@article{evans2009n,
-  title={{$n$-Widths, sup-infs, and optimality ratios for the $k$-version of the isogeometric finite element method}},
-  author={Evans, John A and Bazilevs, Yuri and Babu{\v{s}}ka, Ivo and Hughes, Thomas JR},
-  journal={Computer Methods in Applied Mechanics and Engineering},
-  volume={198},
-  number={21},
-  pages={1726--1741},
-  year={2009},
-  publisher={Elsevier}
-}
-
-@article{melkman1978spline,
-  title={{Spline spaces are optimal for L2 $n$-width}},
-  author={Melkman, Avraham A and Micchelli, Charles A.},
-  journal={Illinois J. Math},
-  volume={22},
-  number={4},
-  year={1978}
-}
-
-@phdthesis{atcheson2013explicit,
-  title={{Explicit Discontinuous Galerkin Methods for Linear Hyperbolic Problems}},
-  author={Atcheson, Thomas},
-  year={2013},
-  school={Rice University}
-}
-
-@article{kosloff1993modified,
-  title={{A Modified Chebyshev Pseudospectral Method with an $O(N^{-1})$ Time Step Restriction}},
-  author={Kosloff, Dan and Tal-Ezer, Hillel},
-  journal={Journal of Computational Physics},
-  volume={104},
-  pages={457--469},
-  year={1993}
-}
-
-@article{johnson2005higher,
-  title={{Higher order B-spline collocation at the Greville abscissae}},
-  author={Johnson, Richard W},
-  journal={Applied Numerical Mathematics},
-  volume={52},
-  number={1},
-  pages={63--75},
-  year={2005},
-  publisher={Elsevier}
-}
-
-@book{farin2002curves,
-  title={{Curves and surfaces for CAGD: a practical guide}},
-  author={Farin, Gerald E},
-  year={2002},
-  publisher={Morgan Kaufmann}
-}
-
-@article{roman2017spectral,
-  title={{Spectral analysis of matrices in Galerkin methods based on generalized B-splines with high smoothness}},
-  author={Roman, Fabio and Manni, Carla and Speleers, Hendrik},
-  journal={Numerische Mathematik},
-  volume={135},
-  number={1},
-  pages={169--216},
-  year={2017},
-  publisher={Springer}
-}
-
-@article{takacs2016approximation,
-  title={{Approximation error estimates and inverse inequalities for B-splines of maximum smoothness}},
-  author={Takacs, Stefan and Takacs, Thomas},
-  journal={Mathematical Models and Methods in Applied Sciences},
-  volume={26},
-  number={07},
-  pages={1411--1445},
-  year={2016},
-  publisher={World Scientific}
-}
-
-@article{nguyen2014nitsche,
-  title={{Nitsche's method for two and three dimensional NURBS patch coupling}},
-  author={Nguyen, Vinh Phu and Kerfriden, Pierre and Brino, Marco and Bordas, St{\'e}phane PA and Bonisoli, Elvio},
-  journal={Computational Mechanics},
-  volume={53},
-  number={6},
-  pages={1163--1182},
-  year={2014},
-  publisher={Springer}
-}
-@incollection{langer2015multipatch,
-  title={{Multipatch discontinuous Galerkin isogeometric analysis}},
-  author={Langer, Ulrich and Mantzaflaris, Angelos and Moore, Stephen E and Toulopoulos, Ioannis},
-  booktitle={Isogeometric Analysis and Applications 2014},
-  pages={1--32},
-  year={2015},
-  publisher={Springer}
-}
-
 
 @article{chan2017weight,
   title={{Weight-adjusted discontinuous Galerkin methods: matrix-valued weights and elastic wave propagation in heterogeneous media}},
